styles/curso/curso.module.scss
.textPink {
	color: var(--pink);
}
.container {
	width: 100vw;
	height: 500vh;
	background-color: var(--off-white);
	scroll-snap-type: y mandatory;
}
.navbar {
	display: flex;
	align-items: center;
	justify-content: space-evenly;
	background-color: var(--dark-blue);
	padding: 20px 0;

	.logo {
		@media (min-width: 700px) {
			margin-left: 26vw;
		}
	}
	.socialMediaWrapper {
		@media (max-width: 700px) {
			display: none;				
		}	
		
		display: flex;
		align-items: center;
		gap: 10px;
		color: var(--off-white);
		
		p {
			font-size: 15px;
			font-weight: 500;
		}
	}
}

.subjectsAbordedWrapper {
	height: 100vh;
	padding: 0 15vw;
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	align-items: center;
	@media (min-width: 700px) {
		flex-direction: row;
	}

	.subjectCard {
		width: 100%;
		height: 100%;
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: space-around;

			.bePartOf {
				border-radius: 20px;
				padding: 0 20px ;
				background-color: var(--blue);
				color: var(--off-white);
			}
			.waranty {
				text-shadow: 4px 3px 3px var(--pink);
				color: transparent
			}
			p {
				color: var(--dark-blue);
			}
		}
	}
	.prizes {
		border-top-left-radius: 70px;
		border-top-right-radius: 70px;
		padding-top: 50px;
		padding-left: 20px;
		padding-right: 20px;
		background-color: var(--dark-blue);
		height: 100vh;
		display: flex;
		flex-direction: column;
		justify-content: space-around;
		align-items: center;
		h2 {
			color: var(--off-white);
			margin-bottom: 10px;
		}
		.cardsWrapper {
			display: flex;
			flex-direction: column;
			gap: 20px;
			@media screen and (min-width: 800px) {
				flex-direction: row;
			}
			.card {
				h2 {
					color: var(--pink);
				}
				height: 60vh;
				width:30vw;
				background-color: var(--off-white);
				border-radius: 20px;
				border: 3px solid var(--blue);
				color: var(--dark-blue);
				display: flex;
				flex-direction: column;
				padding: 0 15px;
				justify-content: space-around;
				align-items: center;
				
				@media (max-width: 800px) {
					height: 40vh;
					width: 80vw;
				}
			}
		}

}

.footerContainer {
	margin-top: 100px;
	position: relative;
	width: 100%;
	height: 100%;
	min-height: 20vh;
	background-color: rgba(#1A48AF, .5);
	display: flex;
	flex-direction: column;
	justify-content: space-around;
	align-items: center;

	@media (min-width:700px) {
		flex-direction: row;
	}
	
	>div {
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: flex-start;
		min-height: 20vh;
		padding-top: 10vh;
		height: 100%;
		gap: 20px;
		>a {
			display: flex;
			font-size: small;
			gap: 10px;
			@media (min-width:700px) {
				letter-spacing: 2px;
				font-size: large;
			}
		}
	}
	>span {
		position: absolute;
		bottom: 10px;
		left: 50%;
		transform: translate(-50%);
		font-size: x-small;
		opacity: .5;
	}
}

.datesWrapper {
	display: flex;
	flex-direction: column;
	gap: 50px;
	text-align: center;
	justify-content: center;
	align-items: center;
	padding: 100px 20%;
	outline: 1px solid #1A48AF;

	h2 {
		text-shadow: 2px 3px 21px #5d86e0;
	}
}

